cargo_tests/pinvoke_async_callback/src/native.rs

// @generated by `cargo dotnet bindgen`; edit the header or command, not this file.
#![allow(dead_code, non_camel_case_types, non_snake_case, non_upper_case_globals)]

/* automatically generated by rust-bindgen 0.72.1 */

pub type ac_callback = ::std::option::Option<
    unsafe extern "C" fn(
        context: *mut ::std::os::raw::c_void,
        value: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int,
>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ac_registration {
    _unused: [u8; 0],
}
#[link(name = "async_callback")]
unsafe extern "C" {
    pub fn ac_register(
        callback: ac_callback,
        context: *mut ::std::os::raw::c_void,
        fail_first_unregister: ::std::os::raw::c_int,
        out_registration: *mut *mut ac_registration,
    ) -> ::std::os::raw::c_int;
    pub fn ac_unregister(registration: *mut ac_registration) -> ::std::os::raw::c_int;
    pub fn ac_live_workers() -> ::std::os::raw::c_int;
    pub fn ac_copy_utf16(input: *const u16, output: *mut *mut u16) -> ::std::os::raw::c_int;
    pub fn ac_free_utf16(value: *mut u16);
}
